# cel2db

./: .gitignore  BUILD  Cargo.toml  MODULE.bazel  README.md
.github/workflows/: rust.yml
cel2db/: BUILD.bazel  Cargo.toml
cel2db/src/: cel2db.h  cel2db.rs  lib.rs
golang/: BUILD.bazel  example.go
python/: BUILD.bazel  Cargo.toml  example.py
python/src/: lib.rs
src/: cel2db.rs  lib.rs  main.rs
