module(
    name = "cel2db",
    version = "0.1",
)
bazel_dep(name = "rules_rust", version = "0.56.0")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "rules_python", version = "1.0.0")


rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(
    rust,
    "rust_toolchains",
)

register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates", # this has to map the `use_repo` name.
    cargo_lockfile = "Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//cel2db:Cargo.toml",
        "//python:Cargo.toml",
    ]
)
use_repo(crate, "crates")
